--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div><img src="img\Ким працюватиме Яся.jpg" 
                         class="picture_book" alt="Фото книги">
                     </div>
-                    <div class="Text_Yasia"><h4>Ким працюватиме Яся</h4>
+                    <div class="Text_Yasya"><h4>Ким працюватиме Яся</h4>
                         <p>    Героїня книжки Олесі Мамчич "Ким працюватиме Яся" замислилася про свою 
                             майбутню професію. Не так просто визначитися в цьому питанні, а 
                             надто – маленькій дівчинці. Тож Яся випробовує власний вибір на 
